# risc0-merkle-demo

./: Makefile  README.md  config.yaml  requirements.txt
core/: Cargo.toml
core/src/: lib.rs
data/: hash  hash_invalid  page_1  page_2  page_3  page_4  page_5
host/: Cargo.toml
host/src/: input.rs  main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
utils/: generate_data.py
